--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -27,7 +27,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Introduction to R and RStudio</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Data frames<br> Data Frame Manipulation with dplyr Dplyr</td> </tr>
+      <tr> <td>11:00</td>  <td>Exploring Data Frames<br> Data Frame Manipulation with dplyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Data Frame Manipulation with dplyr (cont.) <br> Data Frame Manipulation with tidyr</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
