--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -5,12 +5,12 @@
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td>Unix Shell </td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Unix Shell (Continued)</td> </tr>
+      <tr> <td>11:00</td>  <td>Unix Shell (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       {% if site.flavor == "r" %}
-      <tr> <td>13:00</td>  <td>Git I</td> </tr>
+      <tr> <td>13:00</td>  <td>Git</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Git II</td> </tr>
+      <tr> <td>15:00</td>  <td>Git (cont.)</td> </tr>
       {% elsif site.flavor == "python" %}
       <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
