--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,12 +3,12 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Unix Shell </td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/" target="_blank">Unix Shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Unix Shell (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       {% if site.flavor == "r" %}
-      <tr> <td>13:00</td>  <td>Git</td> </tr>
+      <tr> <td>13:00</td>  <td><a href = "https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:00</td>  <td>Git (cont.)</td> </tr>
       {% elsif site.flavor == "python" %}
@@ -25,7 +25,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Introduction to R and RStudio</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/" target="_blank">Introduction to R and RStudio</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Exploring Data Frames<br> Data Frame Manipulation with dplyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
