--- a/_includes/install_instructions/git.html
+++ b/_includes/install_instructions/git.html
@@ -16,7 +16,8 @@ the text below accordingly.
   <p>
     You will need an account at <a href="https://github.com/">github.com</a>
     for parts of the Git lesson. Basic GitHub accounts are free. We encourage
-    you to create a GitHub account if you don't have one already.
+    you to create a GitHub account if you don't have one already
+    using the guide "<a href="https://swcarpentry.github.io/git-novice/#creating-a-github-account">Creating a GitHub Account</a>".
     Please consider what personal information you'd like to reveal. For
     example, you may want to review these
     <a href="https://help.github.com/articles/keeping-your-email-address-private/">instructions
