Add note about recency and RTools for Windows

--- a/_includes/install_instructions/r.html
+++ b/_includes/install_instructions/r.html
@@ -6,6 +6,8 @@
     that is especially powerful for data exploration, visualization, and
     statistical analysis. To interact with R, we use
     <a href="https://posit.co/products/open-source/rstudio/">RStudio</a>.
+    Windows users additionally are recommended to install <a href="https://cloud.r-project.org/bin/windows/Rtools/">RTools</a>.
+    Please make sure you have the latest version of R and RStudio (and RTools on Windows) installed.
   </p>
 
   <div>
@@ -22,7 +24,7 @@
           <a href="https://cran.r-project.org/bin/windows/base/release.htm">this .exe file</a>
           from <a href="https://cran.r-project.org/index.html">CRAN</a>.
           Also, please install the
-          <a href="https://posit.co/download/rstudio-desktop/">RStudio IDE</a>.
+          <a href="https://posit.co/download/rstudio-desktop/">RStudio IDE</a> and <a href="https://cloud.r-project.org/bin/windows/Rtools/">RTools</a>.
           Note that if you have separate user and admin accounts, you should run the
           installers as administrator (right-click on .exe file and select "Run as
           administrator" instead of double-clicking). Otherwise problems may occur later,
