--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -7,17 +7,9 @@
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Unix Shell (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      {% if site.flavor == "r" %}
-      <tr> <td>13:00</td>  <td><a href = "https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href = "https://swcarpentry.github.io/git-novice/" target="_blank">Version Control with Git</a> (episodes 1–4)</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Git (cont.)</td> </tr>
-      {% elsif site.flavor == "python" %}
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      {% else %}
-      {% include warning-flavor.html %}
-      {% endif %}
+      <tr> <td>15:00</td>  <td>Version Control with Git (episodes 5 and 7)</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
